--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mail Dadi</title>
   </head>
   <body>
-
+    <p id="risultato"></p>
 
     <script src="./assets/js/main.js" charset="utf-8"></script>
   </body>
